--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.main.allow-circular-references=true
+
+
+spring.servlet.multipart.max-file-size = 5MB
+spring.servlet.multipart.max-request-size = 5MB
